--- a/notebooks/data_exp.ipynb
+++ b/notebooks/data_exp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "9ad7812b",
    "metadata": {},
    "outputs": [
@@ -10,8 +10,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\nithe\\Documents\\projects\\Support_Ticket_Auto_Triage\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
       "Warning: You are sending unauthenticated requests to the HF Hub. Please set a HF_TOKEN to enable higher rate limits and faster downloads.\n"
      ]
     }
@@ -24,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "4de96158",
    "metadata": {},
    "outputs": [],
@@ -32,17 +30,20 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "import joblib \n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.svm import LinearSVC\n",
     "from sklearn.metrics import accuracy_score, f1_score, classification_report\n",
-    "import joblib "
+    "from sklearn.linear_model import SGDClassifier\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.pipeline import make_pipeline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "02258085",
    "metadata": {},
    "outputs": [
@@ -65,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "e2c16efa",
    "metadata": {},
    "outputs": [
@@ -153,7 +154,7 @@
        "[61765 rows x 16 columns]>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "292549dc",
    "metadata": {},
    "outputs": [],
@@ -175,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "bc0a34d7",
    "metadata": {},
    "outputs": [
@@ -196,7 +197,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "7f4e48d9",
    "metadata": {},
    "outputs": [],
@@ -220,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "f20a09e4",
    "metadata": {},
    "outputs": [
@@ -241,7 +242,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "799b3d79",
    "metadata": {},
    "outputs": [
@@ -270,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "297947fc",
    "metadata": {},
    "outputs": [
@@ -295,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "id": "06b21f14",
    "metadata": {},
    "outputs": [],
@@ -316,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "id": "7065d32a",
    "metadata": {},
    "outputs": [
@@ -345,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "id": "02e7e66c",
    "metadata": {},
    "outputs": [
@@ -354,10 +355,10 @@
      "output_type": "stream",
      "text": [
       "--- Random Samples ---\n",
-      "                                                    text                 label\n",
-      "47040  Support for Integration Failures\\nHere is a co...       Product Support\n",
-      "13790  Concerns About Securing Medical Data in a Hosp...     Technical Support\n",
-      "25729  Strategies for Promoting Digital Gamepad ASUS ...  Billing and Payments\n",
+      "                                                    text              label\n",
+      "17497  Guidance on Optimizing Django Investments with...         IT Support\n",
+      "8112   Security Concern Regarding Healthcare Data\\nA ...  Technical Support\n",
+      "15369  Concerns Regarding Gamepad Integration Perform...  Technical Support\n",
       "\n",
       "Number of very short/empty texts: 3\n"
      ]
@@ -373,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "id": "d832764e",
    "metadata": {},
    "outputs": [
@@ -394,7 +395,7 @@
        "Name: text, Length: 100, dtype: object"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 16,
    "id": "5b840c79",
    "metadata": {},
    "outputs": [
@@ -426,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "816fe5eb",
    "metadata": {},
    "outputs": [],
@@ -458,7 +459,7 @@
       "Validation Accuracy: 0.5223\n",
       "Validation Macro F1: 0.5052\n",
       "\n",
-      "--- Detailed Report ---\n",
+      "Report\n",
       "                                 precision    recall  f1-score   support\n",
       "\n",
       "           Billing and Payments       0.78      0.82      0.80       289\n",
@@ -484,6 +485,7 @@
     "svm.fit(X_train_tfidf, y_train) \n",
     "x_svm = vectorizer.transform(x_val)\n",
     "y_pred_svm = svm.predict(x_svm)\n",
+    "\n",
     "svm_acc = accuracy_score (y_val, y_pred_svm)\n",
     "svm_f1 = f1_score(y_val, y_pred_svm, average='macro')\n",
     "print(f\"Validation Accuracy: {svm_acc:.4f}\")\n",
@@ -495,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 19,
    "id": "7bf09402",
    "metadata": {},
    "outputs": [
@@ -543,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 20,
    "id": "2a37b9fd",
    "metadata": {},
    "outputs": [
@@ -553,7 +555,7 @@
        "['../models/SVM/svm.pkl']"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -561,6 +563,144 @@
    "source": [
     "joblib.dump(vectorizer,'../models/SVM/vectorizer.pkl')\n",
     "joblib.dump(svm, '../models/SVM/svm.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "c5c4a3a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation Accuracy: 0.5541\n",
+      "Validation Macro F1: 0.5442\n",
+      "\n",
+      "Report\n",
+      "                                 precision    recall  f1-score   support\n",
+      "\n",
+      "           Billing and Payments       0.75      0.80      0.78       289\n",
+      "               Customer Service       0.50      0.47      0.48       427\n",
+      "                General Inquiry       0.36      0.49      0.41        41\n",
+      "                Human Resources       0.56      0.68      0.61        56\n",
+      "                     IT Support       0.48      0.51      0.49       333\n",
+      "                Product Support       0.50      0.53      0.51       530\n",
+      "          Returns and Exchanges       0.48      0.61      0.54       140\n",
+      "            Sales and Pre-Sales       0.43      0.41      0.42        85\n",
+      "Service Outages and Maintenance       0.63      0.60      0.62       110\n",
+      "              Technical Support       0.62      0.54      0.58       815\n",
+      "\n",
+      "                       accuracy                           0.55      2826\n",
+      "                      macro avg       0.53      0.56      0.54      2826\n",
+      "                   weighted avg       0.56      0.55      0.55      2826\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "sgd = make_pipeline(StandardScaler(with_mean=False),SGDClassifier(max_iter=1000, loss='log_loss', class_weight='balanced'))\n",
+    "sgd.fit(X_train_tfidf, y_train)\n",
+    "x_val_tfidf = vectorizer.transform(x_val) \n",
+    "y_pred_sgd = sgd.predict(x_val_tfidf)\n",
+    "\n",
+    "sgd_acc = accuracy_score(y_val, y_pred_sgd)\n",
+    "sgd_f1 = f1_score(y_val, y_pred_sgd, average='macro')\n",
+    "\n",
+    "print(f\"Validation Accuracy: {sgd_acc:.4f}\")\n",
+    "print(f\"Validation Macro F1: {sgd_f1:.4f}\")\n",
+    "\n",
+    "print(\"\\nReport\")\n",
+    "print(classification_report(y_val, y_pred_sgd))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "740c8e37",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vectorizing with N-grams\n"
+     ]
+    }
+   ],
+   "source": [
+    "#vectorizer with n-gram range\n",
+    "n_vectorizer = TfidfVectorizer(ngram_range=(1, 2), stop_words='english', max_features=10000)\n",
+    "\n",
+    "print(\"Vectorizing with N-grams\")\n",
+    "x_ngram = n_vectorizer.fit_transform(x_train)\n",
+    "x_val_ngram = n_vectorizer.transform(x_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "014799ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Accuracy: 0.6592\n",
+      "                                 precision    recall  f1-score   support\n",
+      "\n",
+      "           Billing and Payments       0.85      0.83      0.84       289\n",
+      "               Customer Service       0.59      0.63      0.61       427\n",
+      "                General Inquiry       0.57      0.59      0.58        41\n",
+      "                Human Resources       0.72      0.61      0.66        56\n",
+      "                     IT Support       0.58      0.57      0.57       333\n",
+      "                Product Support       0.64      0.65      0.64       530\n",
+      "          Returns and Exchanges       0.68      0.59      0.63       140\n",
+      "            Sales and Pre-Sales       0.65      0.59      0.62        85\n",
+      "Service Outages and Maintenance       0.68      0.68      0.68       110\n",
+      "              Technical Support       0.68      0.68      0.68       815\n",
+      "\n",
+      "                       accuracy                           0.66      2826\n",
+      "                      macro avg       0.66      0.64      0.65      2826\n",
+      "                   weighted avg       0.66      0.66      0.66      2826\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "sgd_ng = make_pipeline(StandardScaler(with_mean=False), SGDClassifier(max_iter=1000, class_weight='balanced', random_state=42))\n",
+    "sgd_ng.fit(x_ngram, y_train)\n",
+    "\n",
+    "y_pred_ng = sgd_ng.predict(x_val_ngram)\n",
+    "\n",
+    "acc = accuracy_score(y_val, y_pred_ng)\n",
+    "print(f\"\\nAccuracy: {acc:.4f}\")\n",
+    "print(classification_report(y_val, y_pred_ng))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "e95ffcdb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['../models/svm/svm.pkl']"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joblib.dump(n_vectorizer, '../models/svm/vectorizer.pkl')\n",
+    "joblib.dump(sgd_ng, '../models/svm/svm.pkl')"
    ]
   }
  ],
