--- a/notebooks/data_exp_linear.ipynb
+++ b/notebooks/data_exp_linear.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "9ad7812b",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Warning: You are sending unauthenticated requests to the HF Hub. Please set a HF_TOKEN to enable higher rate limits and faster downloads.\n"
+      "c:\\Users\\nithe\\Documents\\projects\\Support_Ticket_Auto_Triage\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
    ],
@@ -22,11 +23,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4de96158",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#importing libs and other stuff\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -43,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "02258085",
    "metadata": {},
    "outputs": [
@@ -66,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "e2c16efa",
    "metadata": {},
    "outputs": [
@@ -154,29 +156,31 @@
        "[61765 rows x 16 columns]>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#switching to pandas\n",
     "df = ds['train'].to_pandas()\n",
     "df.info"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "292549dc",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#filtering only to english tickets\n",
     "df_en = df[df['language'] == 'en'].copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "bc0a34d7",
    "metadata": {},
    "outputs": [
@@ -197,7 +201,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,11 +212,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "7f4e48d9",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#there are like 50 different labels and so reducing to top 10. Naming the rest of the lables as 'other'\n",
     "top_label=df_en['queue'].value_counts().head(10).index.tolist()\n",
     "# print(top_label)\n",
     "\n",
@@ -221,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "f20a09e4",
    "metadata": {},
    "outputs": [
@@ -242,7 +247,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "799b3d79",
    "metadata": {},
    "outputs": [
@@ -271,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "297947fc",
    "metadata": {},
    "outputs": [
@@ -286,6 +291,7 @@
     }
    ],
    "source": [
+    "#spliting the dataset \n",
     "train, temp = train_test_split(df_en, test_size=0.2, stratify=df_en['label'], random_state=42)\n",
     "valid, test = train_test_split(temp, test_size=0.5, stratify=temp['label'], random_state=42)\n",
     "\n",
@@ -296,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "06b21f14",
    "metadata": {},
    "outputs": [],
@@ -317,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "7065d32a",
    "metadata": {},
    "outputs": [
@@ -347,34 +353,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "02e7e66c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--- Random Samples ---\n",
-      "                                                    text              label\n",
-      "17497  Guidance on Optimizing Django Investments with...         IT Support\n",
-      "8112   Security Concern Regarding Healthcare Data\\nA ...  Technical Support\n",
-      "15369  Concerns Regarding Gamepad Integration Perform...  Technical Support\n",
-      "\n",
-      "Number of very short/empty texts: 3\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"--- Random Samples ---\")\n",
-    "print(train[['text', 'label']].sample(3))\n",
-    "\n",
-    "short_count = (train['text'].str.len() < 20).sum()\n",
-    "print(f\"\\nNumber of very short/empty texts: {short_count}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
    "id": "d832764e",
    "metadata": {},
    "outputs": [
@@ -395,7 +373,7 @@
        "Name: text, Length: 100, dtype: object"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "5b840c79",
    "metadata": {},
    "outputs": [
@@ -419,6 +397,7 @@
     }
    ],
    "source": [
+    "#vectorizing\n",
     "vectorizer = TfidfVectorizer()\n",
     "X_train_tfidf = vectorizer.fit_transform(x_train)\n",
     "vectorizer.get_feature_names_out()\n",
@@ -427,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "816fe5eb",
    "metadata": {},
    "outputs": [],
@@ -447,8 +426,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "929dbedc",
+   "metadata": {},
+   "source": [
+    "LinearSVC"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "84587019",
    "metadata": {},
    "outputs": [
@@ -497,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "id": "7bf09402",
    "metadata": {},
    "outputs": [
@@ -505,10 +492,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "FINAL TEST ACCURACY: 0.5239\n",
-      "FINAL TEST MACRO F1: 0.5264\n",
+      "Test Accuracy: 0.5239\n",
+      "Test F1: 0.5264\n",
       "\n",
-      "--- Final Test Classification Report ---\n",
+      "Final Test Classification Report\n",
       "                                 precision    recall  f1-score   support\n",
       "\n",
       "           Billing and Payments       0.76      0.83      0.80       290\n",
@@ -536,16 +523,16 @@
     "test_accuracy = accuracy_score(y_test, y_test_pred)\n",
     "test_f1 = f1_score(y_test, y_test_pred, average='macro')\n",
     "\n",
-    "print(f\"FINAL TEST ACCURACY: {test_accuracy:.4f}\")\n",
-    "print(f\"FINAL TEST MACRO F1: {test_f1:.4f}\")\n",
+    "print(f\"Test Accuracy: {test_accuracy:.4f}\")\n",
+    "print(f\"Test F1: {test_f1:.4f}\")\n",
     "\n",
-    "print(\"\\n--- Final Test Classification Report ---\")\n",
+    "print(\"\\nFinal Test Classification Report\")\n",
     "print(classification_report(y_test, y_test_pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "2a37b9fd",
    "metadata": {},
    "outputs": [
@@ -555,7 +542,7 @@
        "['../models/SVM/svm.pkl']"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,8 +553,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "64bd4eed",
+   "metadata": {},
+   "source": [
+    "SGD Classifier"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "id": "c5c4a3a7",
    "metadata": {},
    "outputs": [
@@ -575,26 +570,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation Accuracy: 0.5541\n",
-      "Validation Macro F1: 0.5442\n",
+      "Validation Accuracy: 0.5580\n",
+      "Validation Macro F1: 0.5393\n",
       "\n",
       "Report\n",
       "                                 precision    recall  f1-score   support\n",
       "\n",
-      "           Billing and Payments       0.75      0.80      0.78       289\n",
-      "               Customer Service       0.50      0.47      0.48       427\n",
-      "                General Inquiry       0.36      0.49      0.41        41\n",
-      "                Human Resources       0.56      0.68      0.61        56\n",
-      "                     IT Support       0.48      0.51      0.49       333\n",
-      "                Product Support       0.50      0.53      0.51       530\n",
-      "          Returns and Exchanges       0.48      0.61      0.54       140\n",
-      "            Sales and Pre-Sales       0.43      0.41      0.42        85\n",
-      "Service Outages and Maintenance       0.63      0.60      0.62       110\n",
-      "              Technical Support       0.62      0.54      0.58       815\n",
+      "           Billing and Payments       0.76      0.81      0.78       289\n",
+      "               Customer Service       0.46      0.52      0.49       427\n",
+      "                General Inquiry       0.37      0.46      0.41        41\n",
+      "                Human Resources       0.58      0.61      0.59        56\n",
+      "                     IT Support       0.47      0.49      0.48       333\n",
+      "                Product Support       0.57      0.47      0.52       530\n",
+      "          Returns and Exchanges       0.49      0.59      0.54       140\n",
+      "            Sales and Pre-Sales       0.37      0.40      0.38        85\n",
+      "Service Outages and Maintenance       0.62      0.59      0.60       110\n",
+      "              Technical Support       0.62      0.58      0.60       815\n",
       "\n",
-      "                       accuracy                           0.55      2826\n",
-      "                      macro avg       0.53      0.56      0.54      2826\n",
-      "                   weighted avg       0.56      0.55      0.55      2826\n",
+      "                       accuracy                           0.56      2826\n",
+      "                      macro avg       0.53      0.55      0.54      2826\n",
+      "                   weighted avg       0.56      0.56      0.56      2826\n",
       "\n"
      ]
     }
@@ -617,30 +612,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 34,
    "id": "740c8e37",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Vectorizing with N-grams\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#vectorizer with n-gram range\n",
     "n_vectorizer = TfidfVectorizer(ngram_range=(1, 2), stop_words='english', max_features=10000)\n",
     "\n",
-    "print(\"Vectorizing with N-grams\")\n",
     "x_ngram = n_vectorizer.fit_transform(x_train)\n",
     "x_val_ngram = n_vectorizer.transform(x_val)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
    "id": "014799ef",
    "metadata": {},
    "outputs": [
@@ -683,30 +669,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
+   "id": "e41ba2d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy: 0.6664\n",
+      "Test Macro F1: 0.6837\n",
+      "\n",
+      "Final Test Classification Report\n",
+      "                                 precision    recall  f1-score   support\n",
+      "\n",
+      "           Billing and Payments       0.87      0.80      0.83       290\n",
+      "               Customer Service       0.61      0.61      0.61       427\n",
+      "                General Inquiry       0.72      0.82      0.77        40\n",
+      "                Human Resources       0.64      0.78      0.70        55\n",
+      "                     IT Support       0.59      0.60      0.60       334\n",
+      "                Product Support       0.63      0.60      0.62       531\n",
+      "          Returns and Exchanges       0.69      0.63      0.66       140\n",
+      "            Sales and Pre-Sales       0.58      0.67      0.62        84\n",
+      "Service Outages and Maintenance       0.75      0.74      0.75       111\n",
+      "              Technical Support       0.68      0.70      0.69       815\n",
+      "\n",
+      "                       accuracy                           0.67      2827\n",
+      "                      macro avg       0.68      0.70      0.68      2827\n",
+      "                   weighted avg       0.67      0.67      0.67      2827\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "x_test_ngram = n_vectorizer.transform(x_test)\n",
+    "y_test_pred = sgd_ng.predict(x_test_ngram)\n",
+    "\n",
+    "test_acc = accuracy_score(y_test, y_test_pred)\n",
+    "test_f1 = f1_score(y_test, y_test_pred, average='macro')\n",
+    "\n",
+    "print(f\"Test Accuracy: {test_acc:.4f}\")\n",
+    "print(f\"Test Macro F1: {test_f1:.4f}\")\n",
+    "\n",
+    "print(\"\\nFinal Test Classification Report\")\n",
+    "print(classification_report(y_test, y_test_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "id": "e95ffcdb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['../models/svm/svm.pkl']"
+       "['../models/sgd/sgd.pkl']"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "joblib.dump(n_vectorizer, '../models/svm/vectorizer.pkl')\n",
-    "joblib.dump(sgd_ng, '../models/svm/svm.pkl')"
+    "joblib.dump(n_vectorizer, '../models/sgd/sgd_vectorizer.pkl')\n",
+    "joblib.dump(sgd_ng, '../models/sgd/sgd.pkl')"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "support-ticket-auto-triage (3.14.2)",
+   "display_name": "support-ticket-auto-triage (3.12.12)",
    "language": "python",
    "name": "python3"
   },
@@ -720,7 +754,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.14.2"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
