--- a/notebooks/distilBERT.ipynb
+++ b/notebooks/distilBERT.ipynb
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "460b7046",
    "metadata": {},
    "outputs": [
@@ -419,13 +419,13 @@
     "    compute_metrics=compute_metrics\n",
     ")\n",
     "\n",
-    "print(\"Starting Weighted Training (10 Epochs)...\")\n",
+    "print(\"Starting Weighted Training\")\n",
     "trainer.train()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "92a18f3c",
    "metadata": {},
    "outputs": [
@@ -484,7 +484,6 @@
     "print(\"\\nFINAL TEST REPORT\")\n",
     "print(classification_report(y_test_labels, y_test_preds, target_names=unique_labels))\n",
     "\n",
-    "# 4. Save the Model (So you don't have to retrain later)\n",
     "save_path = \"../models/transformer\"\n",
     "trainer.save_model(save_path)\n",
     "tokenizer.save_pretrained(save_path)\n",
